# aum

./: .anjuta_sym_db.db  .gitignore  Makefile.am  Makefile.in  config.h.in  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  Makefile.in  aum.c  aum.h  aum.ui  callbacks.c  callbacks.h  conf.c  conf.h  error.h  main-window.c  main-window.h  main.c  sync.c  sync.h  util.c  util.h
